[tool.poetry]
name = "pwntest"
version = "0.1.0"
description = "A Python library for CTF authors for challenge testing"
authors = ["sharkmoos <muddy117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pwntools = "^4.9.0"
requests = "^2.28.1"
mock = "^5.0.1"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = [
    "test_*.py"
]
testpaths = [
    "examples",
]
filterwarnings = [
    "ignore:.*is deprecated:DeprecationWarning"
]
