[tool.poetry]
name = "pwntest"
version = "0.1.0"
description = "A Python library for CTF authors for challenge testing"
authors = ["sharkmoos <muddy117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pwntools = "^4.9.0"
requests = "^2.31.0"
mock = "^5.0.1"
pytest = "^7.2.1"
sqlalchemy = "^2.0.3"
flask = "^2.3.2"
bs4 = "^0.0.1"
ruamel-yaml = "^0.17.21"
rpyc = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = [
    "test_*.py"
]
testpaths = [
    "examples",
]
filterwarnings = [
    "ignore:.*is deprecated:DeprecationWarning",
    "ignore:.*I/O operation on closed file:ResourceWarning"
]
markers = [
    "example: marks tests as example (deselect with '-m \"not example\"')"
]
